tests: fix tests for core/options

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,13 +1,9 @@
 CPPFLAGS = -O1 -I../core/
 
-all: test_types options_test options_read read_conf_test gs_bbx_test
+all: test_types gs_bbx_test
 
-test_types: ../core/libgeo/geo_types.cpp
-options_test: ../core/utils/options.cpp
-options_read: ../core/utils/options.cpp
-read_conf_test: ../core/utils/options.cpp ../core/utils/read_conf.cpp
-gs_bbx_test: ../core/libfig/libfig.a ../core/utils/libutils.a
-read_conf_test strvec_test: ../core/utils/strvec.cpp
+test_types: ../core/geo/geo_types.cpp
+gs_bbx_test: ../core/fig/libfig.a ../core/utils/libutils.a
 
 LDFLAGS=-lpng -ljpeg -ltiff
-test_ptshift: ../libgeo/libgeo.a ../loaders/libloaders.a ../utils/libutils.a ../jeeps/libjeeps.a ../lib2d/lib2d.a
+test_ptshift: ../geo/libgeo.a ../loaders/libloaders.a ../utils/libutils.a ../jeeps/libjeeps.a ../lib2d/lib2d.a
