fix loaders; make vmap3 compile

--- a/core/loaders/SConscript
+++ b/core/loaders/SConscript
@@ -17,5 +17,8 @@ env.MLib('loaders',
                   geo_io
                   jeeps
                   options
-                  utils"""))
+                  utils
+                  libjpeg
+                  libtiff
+                  libpng"""))
 
