--- a/core/geo/SConscript
+++ b/core/geo/SConscript
@@ -10,7 +10,7 @@ env.MLib('geo',
                   """),
          deps = Split("""
                   2d
-                  utils
                   options
+                  loaders
                   libproj
                   """))
