convert programs and viewer (phew!)

--- a/programs/SConscript
+++ b/programs/SConscript
@@ -1,13 +1,21 @@
+Import('env')
 
-mapsoft_libs = Split ("geo_io geo loaders jeeps fig mp utils options 2d")
-other_libs   = Split ("usb tiff jpeg png curl proj")
+def DefineProg(name):
+    env.MProg(name,
+              srcs = [name + '.cpp'],
+	      deps = Split("""
+                       geo_io
+                       geo
+                       loaders
+                       jeeps
+                       fig
+                       mp
+                       utils
+                       options
+                       2d
+                       """))
 
-Import ('env_cairo')
-Import ('env')
-env_geo = env_cairo.Clone()
-env_geo.Prepend(LIBS=[mapsoft_libs, other_libs])
-
-map (lambda(f): env_geo.Program(f+'.cpp'),\
+map (lambda(f): DefineProg(f),
   Split("""
     mapsoft_add2fig
     mapsoft_convert
