--- a/viewer/SConscript
+++ b/viewer/SConscript
@@ -1,18 +1,23 @@
-Import ('env_gtk')
-le = env_gtk.Clone()
+Import ('env')
 
-mapsoft_libs = Split ("viewer gred geo_io geo loaders jeeps fig mp utils options 2d")
-other_libs   = Split ("usb tiff jpeg png curl proj")
+env.MLib("viewer",
+         srcs = Split("""
+                  generic_dialog.cpp
+                  action_manager.cpp
+                  workplane.cpp
+                  """),
+         deps = Split("""
+                  options
+                  2d
+                  gred
+                  """))
 
-le.Prepend(LIBS=[mapsoft_libs,other_libs])
-
-le.Library("viewer", Split ("""
-        generic_dialog.cpp
-	action_manager.cpp
-	workplane.cpp
-        """))
-
-le.Program("mapsoft_mapview.cpp")
-#le.Program('mapsoft_googleview', "mapsoft_googleview.cpp")
-#le.Program('mapsoft_ksview', "mapsoft_ksview.cpp")
+env.MProg('mapsoft_mapview',
+          srcs = ['mapsoft_mapview.cpp'],
+          deps = Split("""
+                   viewer
+                   geo_io
+                   utils
+                   gred
+                   """))
 
