--- a/tests/geo_nom/SConscript
+++ b/tests/geo_nom/SConscript
@@ -1,4 +1,5 @@
 Import('env')
 
-libs=Split("geo 2d")
-env.Program("geo_nom_test.cpp",  LIBS=[libs])
+env.MProg('geo_nom_test',
+          srcs = ['geo_nom_test.cpp'],
+          deps = ['geo'])
