vector/data: add new type in cnf files

--- a/vector/data/hr.cnf
+++ b/vector/data/hr.cnf
@@ -517,7 +517,11 @@
   desc: 
   mp:   POLYLINE 0x2B 0 0
   fig:  2 1 2 1 26 7 90 -1 -1 2.000 1 1 0 0 0 0
-
+-
+  name: вал
+  desc:.
+  mp:   POLYLINE 0x2C 0 0
+  fig:  2 1 2 2 26 7 90 -1 -1 2.000 1 1 0 0 0 0
 -
   name: text object
   mp:   POLYLINE 0xFF 0 0
