--- a/vector/data/mmb.cnf
+++ b/vector/data/mmb.cnf
@@ -625,7 +625,12 @@
   mp:   POLYLINE 0x2B 0 0
   fig:  2 1 2 1 26 7 90 -1 -1 2.000 1 1 0 0 0 0
   ocad: 829002
-
+-
+  name: вал
+  desc: 
+  mp:   POLYLINE 0x2C 0 0
+  fig:  2 1 2 2 26 7 90 -1 -1 2.000 1 1 0 0 0 0
+  ocad: 829003
 -
   name: bad route
   mp:   POLYLINE 0x50 0 0
