--- a/vector/data/mmb.cnf
+++ b/vector/data/mmb.cnf
@@ -44,11 +44,12 @@
   txt:  4 0 1 40 -1 18 6 0.0000 4
   ocad: 100000
   ocad_txt: 700000
+  move_to: 0x100026 0x100015 0x100018 0x10001F 0x200029 0x20003B 0x200053
 -
   name: подпись лесного квартала, урочища
   mp:   POI 0x2800 0 0
   fig:  2 1 0 4 12 7  55 -1 -1 0.000 0 1 -1 0 0 1 
-  txt:  4 1 0 40 -1 3 8 0.0000 4                 
+  txt:  4 1 0 40 -1 3 8 0.0000 4
   ocad_txt: 780000
 -
   name: памятник
@@ -78,56 +79,66 @@
   mp:   POI 0x5905 0 1
   fig:  2 1 0 4  4 7  57 -1 -1 0.000 0 0 -1 0 0 1 
   txt:  4 0 0 40 -1 3 8 0.0000 4
+  pic:  zd.fig
   ocad: 590005
   ocad_txt: 780000
+  rotate_to: 0x10000D 0x100027
 -
   name: перевал неизвестной сложности
   mp:   POI 0x6406 0 0
   fig:  2 1 0 1 1 7 158 -1 -1 0.000 0 1 -1 0 0 1 
   txt:  4 0 15 40 -1 18 8 0.0000 4
   pic:  per.fig
+  rotate_to: 0x10000C
 -
   name: перевал н/к
   mp:   POI 0x6620 0 0
   fig:  2 1 0 1 2 7 158 -1 -1 0.000 0 1 -1 0 0 1 
   txt:  4 0 15 40 -1 18 8 0.0000 4
   pic:  pernk.fig
+  rotate_to: 0x10000C
 -
   name: перевал 1А
   mp:   POI 0x6621 0 0
   fig:  2 1 0 1 3 7 158 -1 -1 0.000 0 1 -1 0 0 1 
   txt:  4 0 15 40 -1 18 8 0.0000 4
   pic:  per1a.fig
+  rotate_to: 0x10000C
 -
   name: перевал 1Б
   mp:   POI 0x6622 0 0
   fig:  2 1 0 1 4 7 158 -1 -1 0.000 0 1 -1 0 0 1 
   txt:  4 0 15 40 -1 18 8 0.0000 4
   pic:  per1b.fig
+  rotate_to: 0x10000C
 -
   name: перевал 2А
   mp:   POI 0x6623 0 0
   fig:  2 1 0 1 5 7 158 -1 -1 0.000 0 1 -1 0 0 1 
   txt:  4 0 15 40 -1 18 8 0.0000 4
   pic:  per2a.fig
+  rotate_to: 0x10000C
 -
   name: перевал 2Б
   mp:   POI 0x6624 0 0
   fig:  2 1 0 1 6 7 158 -1 -1 0.000 0 1 -1 0 0 1 
   txt:  4 0 15 40 -1 18 8 0.0000 4
   pic:  per2b.fig
+  rotate_to: 0x10000C
 -
   name: перевал 3А
   mp:   POI 0x6625 0 0
   fig:  2 1 0 1 7 7 158 -1 -1 0.000 0 1 -1 0 0 1 
   txt:  4 0 15 40 -1 18 8 0.0000 4
   pic:  per3a.fig
+  rotate_to: 0x10000C
 -
   name: перевал 3Б
   mp:   POI 0x6626 0 0
   fig:  2 1 0 1 8 7 158 -1 -1 0.000 0 1 -1 0 0 1 
   txt:  4 0 15 40 -1 18 8 0.0000 4
   pic:  per3b.fig
+  rotate_to: 0x10000C
 -
   name: каньон
   mp:   POI 0x660B 0 0
@@ -187,12 +198,14 @@
   fig:  2 1 0 4 17 7  57 -1 -1 0.000 0 0 -1 0 0 1 
   txt:  4 0 1 40 -1 3 8 0.0000 4
   ocad_txt: 729000
+  rotate_to: 0x100026 0x100015 0x100018 0x10001F
 -
   name: порог
   mp:   POI 0x650E 0 0
   fig:  2 1 0 4  8 7  57 -1 -1 0.000 0 0 -1 0 0 1 
   txt:  4 0 1 40 -1 3 8 0.0000 4
   ocad_txt: 729000
+  rotate_to: 0x100026 0x100015 0x100018 0x10001F
 -
   name: яма
   mp:   POI 0x6603 0 0
