vector/data: add new types

--- a/vector/data/mmb.cnf
+++ b/vector/data/mmb.cnf
@@ -46,6 +46,10 @@
   ocad_txt: 700000
   move_to: 0x100026 0x100015 0x100018 0x10001F 0x200029 0x20003B 0x200053
 -
+  name: магазин
+  mp:   POI 0x2E00 0 0
+  fig:  2 1 0 2 4 7 50 -1 -1 0.000 1 0 7 0 0 1 
+-
   name: подпись лесного квартала, урочища
   mp:   POI 0x2800 0 0
   fig:  2 1 0 4 12 7  55 -1 -1 0.000 0 1 -1 0 0 1 
@@ -634,16 +638,18 @@
   ocad: 829001
 -
   name: сухая канава
-  desc: 
   mp:   POLYLINE 0x2B 0 0
   fig:  2 1 2 1 26 7 90 -1 -1 2.000 1 1 0 0 0 0
   ocad: 829002
 -
   name: вал
-  desc: 
   mp:   POLYLINE 0x2C 0 0
   fig:  2 1 2 2 26 7 90 -1 -1 2.000 1 1 0 0 0 0
   ocad: 829003
+-
+  name: заросшая дорога
+  mp:   POLYLINE 0x2D 0 0
+  fig:  2 1 1 1 36 7 80 -1 -1 4.000 1 0 7 0 0 0
 -
   name: bad route
   mp:   POLYLINE 0x50 0 0
