--- a/vector/data/hr.cnf
+++ b/vector/data/hr.cnf
@@ -36,6 +36,10 @@
   fig:  2 1 0 4  1 7  57 -1 -1 0.000 0 1 -1 0 0 1 
   txt:  4 0 1 40 -1 18 6 0.0000 4
 -
+  name: магазин
+  mp:   POI 0x2E00 0 0
+  fig:  2 1 0 2 4 7 50 -1 -1 0.000 1 0 7 0 0 1.
+-
   name: подпись лесного квартала, урочища
   mp:   POI 0x2800 0 0
   fig:  2 1 0 4 12 7  55 -1 -1 0.000 0 1 -1 0 0 1
@@ -519,9 +523,12 @@
   fig:  2 1 2 1 26 7 90 -1 -1 2.000 1 1 0 0 0 0
 -
   name: вал
-  desc:.
   mp:   POLYLINE 0x2C 0 0
   fig:  2 1 2 2 26 7 90 -1 -1 2.000 1 1 0 0 0 0
+-
+  name: заросшая дорога
+  mp:   POLYLINE 0x2D 0 0
+  fig:  2 1 1 1 36 7 80 -1 -1 4.000 1 0 7 0 0 0
 -
   name: text object
   mp:   POLYLINE 0xFF 0 0
