vector/data: modify config

--- a/vector/data/hr.cnf
+++ b/vector/data/hr.cnf
@@ -528,7 +528,7 @@
 -
   name: заросшая дорога
   mp:   POLYLINE 0x2D 0 0
-  fig:  2 1 1 1 36 7 80 -1 -1 4.000 1 0 7 0 0 0
+  fig:  2 1 1 1 4210752 7 80 -1 -1 4.000 1 0 7 0 0 0
 -
   name: text object
   mp:   POLYLINE 0xFF 0 0
