--- a/vector/data/mmb.cnf
+++ b/vector/data/mmb.cnf
@@ -204,12 +204,13 @@
   ocad_txt: 729000
   rotate_to: 0x100026 0x100015 0x100018 0x10001F
 -
-  name: порог
+  name: порог /не использовать!/
   mp:   POI 0x650E 0 0
   fig:  2 1 0 4  8 7  57 -1 -1 0.000 0 0 -1 0 0 1 
   txt:  4 0 1 40 -1 3 8 0.0000 4
   ocad_txt: 729000
   rotate_to: 0x100026 0x100015 0x100018 0x10001F
+  replace_by: 0x6508
 -
   name: яма
   mp:   POI 0x6603 0 0
@@ -387,24 +388,28 @@
   mp:   POLYLINE 0x35 0 0
   fig:  2 1 0 3 31 7 88 -1 -1 6.000 0 2 -1 0 0 0
   ocad: 835000
+  curve: 50
 -
   name: хороший путь
   desc:
   mp:   POLYLINE 0x34 0 0
   fig:  2 1 2 3 31 7 88 -1 -1 6.000 0 2 -1 0 0 0
   ocad: 834000
+  curve: 50
 -
   name: удовлетворительный путь
   desc:
   mp:   POLYLINE 0x33 0 0
   fig:  2 1 2 3 13 7 88 -1 -1 6.000 0 2 -1 0 0 0
   ocad: 833000
+  curve: 50
 -
   name: плохой путь
   desc:
   mp:   POLYLINE 0x32 0 0
   fig:  2 1 0 3 13 7 88 -1 -1 6.000 0 2 -1 0 0 0
   ocad: 832000
+  curve: 50
 
 -
   name: кривая надпись
@@ -417,18 +422,21 @@
   mp:   POLYLINE 0x01 0 2
   fig:  2 1 0 7 4210752 27 80 -1 -1 0.000 1 0 0 0 0 0
   ocad: 801000
+  curve: 100
 -
   name: большое шоссе
   desc:
   mp:   POLYLINE 0x0B 0 2
   fig:  2 1 0 5 4210752 27 80 -1 -1 0.000 1 0 0 0 0 0
   ocad: 809002
+  curve: 100
 -
   name: шоссе
   desc: 
   mp:   POLYLINE 0x02 0 2
   fig:  2 1 0 4 4210752 27 80 -1 -1 0.000 1 0 0 0 0 0
   ocad: 802000
+  curve: 100
 -
   name: верхний край обрыва
   desc: 
@@ -441,6 +449,7 @@
   mp:   POLYLINE 0x04 0 1
   fig:  2 1 0 3 4210752 7 80 -1 -1 0.000 1 0 0 0 0 0
   ocad: 804000
+  curve: 100
 -
   name: отдельные строения
   desc: 
@@ -455,12 +464,14 @@
   mp:   POLYLINE 0x06 0 1
   fig:  2 1 0 1  0 7 80 -1 -1 0.000 1 0 0 0 0 0
   ocad: 806000
+  curve: 50
 -
   name: непроезжий грейдер
   desc: 
   mp:   POLYLINE 0x07 0 1
   fig:  2 1 1 3 4210752 7 80 -1 -1 4.000 1 0 0 0 0 0
   ocad: 807000
+  curve: 100
 -
   name: мост-1 (пешеходный)
   desc: 
@@ -491,11 +502,13 @@
   mp:   POLYLINE 0x0A 0 1
   fig:  2 1 0 1 4210752 7 80 -1 -1 0.000 1 0 0 0 0 0
   ocad: 809001
+  curve: 50
 -
   name: хребет
   desc: 
   mp:   POLYLINE 0x0C 0 1
   fig:  2 1 0 2 24 7 89 -1 -1 0.000 1 1 0 0 0 0
+  curve: 50
 -
   name: пересыхающий ручей
   desc: 
@@ -577,18 +590,21 @@
   mp:   POLYLINE 0x20 0 0
   fig:  2 1 1 1 26 7 90 -1 -1 4.000 1 1 0 0 0 0
   ocad: 820000
+  curve: 100
 -
   name: горизонтали, бергштрихи
   desc: 
   mp:   POLYLINE 0x21 0 0
   fig:  2 1 0 1 26 7 90 -1 -1 0.000 1 1 0 0 0 0
   ocad: 821000
+  curve: 100
 -
   name: жирная горизонталь
   desc: 
   mp:   POLYLINE 0x22 0 0
   fig:  2 1 0 2 26 7 90 -1 -1 0.000 1 1 0 0 0 0
   ocad: 822000
+  curve: 100
 -
   name: контур леса
   desc: 
@@ -607,17 +623,20 @@
   mp:   POLYLINE 0x25 0 0
   fig:  2 1 0 2 25 7 89 -1 -1 0.000 1 1 0 0 0 0
   ocad: 825000
+  curve: 50
 -
   name: УЖД
   desc:
   mp:   POLYLINE 0x0D 0 2
   fig:  2 1 0 3  0 7 80 -1 -1 0.000 1 0 0 0 0 0
+  curve: 100
 -
   name: железная дорога
   desc: 
   mp:   POLYLINE 0x27 0 2
   fig:  2 1 0 4  0 7 80 -1 -1 0.000 1 0 0 0 0 0
   ocad: 827000
+  curve: 100
 -
   name: газопровод
   desc: 
@@ -636,6 +655,7 @@
   mp:   POLYLINE 0x2A 0 0
   fig:  2 1 2 1  0 7 80 -1 -1 2.000 1 0 0 0 0 0
   ocad: 829001
+  curve: 50
 -
   name: сухая канава
   mp:   POLYLINE 0x2B 0 0
@@ -649,11 +669,14 @@
 -
   name: заросшая дорога
   mp:   POLYLINE 0x2D 0 0
-  fig:  2 1 1 1 36 7 80 -1 -1 4.000 1 0 7 0 0 0
+  fig:  2 1 1 1 4210752 7 80 -1 -1 4.000 1 0 7 0 0 0
+  curve: 50
 -
-  name: bad route
+  name: bad route /не использовать!/
   mp:   POLYLINE 0x50 0 0
-  fig:  2 1 1 1 4210752 7 80 -1 -1 4.000 0 0 -1 0 0 0
+  fig:  2 1 1 1 4210700 7 80 -1 -1 4.000 0 0 -1 0 0 0
+  curve: 50
+  replace_by: 0x10002D
 
 -
   name: text object
