vector/data/hr.cnf: fix typo

--- a/vector/data/hr.cnf
+++ b/vector/data/hr.cnf
@@ -38,7 +38,7 @@
 -
   name: магазин
   mp:   POI 0x2E00 0 0
-  fig:  2 1 0 2 4 7 50 -1 -1 0.000 1 0 7 0 0 1.
+  fig:  2 1 0 2 4 7 50 -1 -1 0.000 1 0 7 0 0 1
 -
   name: подпись лесного квартала, урочища
   mp:   POI 0x2800 0 0
