vector/data: install fig libraries

--- a/vector/data/SConscript
+++ b/vector/data/SConscript
@@ -58,6 +58,7 @@ e.Program('zn_text.cpp')
 
 e.Cnf2Png('mmb')
 e.Cnf2CM('mmb')
+e.Figlib('mmb')
 e.Install(e.datadir, "mmb.cnf")
 e.Install(e.datadir, "mmb.png")
 e.Install(e.datadir, "mmb.cmap.pnm")
@@ -66,6 +67,7 @@ e.Install(e.datadir, "mmb.ocd9")
 
 e.Cnf2Png('hr')
 e.Cnf2CM('hr')
+e.Figlib('hr')
 e.Install(e.datadir, "hr.cnf")
 e.Install(e.datadir, "hr.png")
 e.Install(e.datadir, "hr.cmap.pnm")
