vector/data: add new pic

--- a/vector/data/pics/SConscript
+++ b/vector/data/pics/SConscript
@@ -13,7 +13,7 @@ env1.AddMethod(pic2png, 'Pic2Png')
 ####
 
 map (lambda(s): env1.Pic2Png(s), Split("""
-  avt kladb cross cerkov pam ohotn:88 bash:77 shaht:57 razv trig trig_hr kan
+  avt kladb cross cerkov pam ohotn:88 bash:77 shaht:57 razv dom trig trig_hr kan
   ldp per per1a per1b per2a per2b per3a per3b pernk kladb pupyr yama skala
   bol_l:63 bol_h:62 redk vyr_n vyr_o ledn zd ur_vod por vdp
 """))
