--- a/vector/data/hr.cnf
+++ b/vector/data/hr.cnf
@@ -159,6 +159,7 @@
   mp:   POI 0x6402 0 1
   fig:  2 1 0 4  0 7  57 -1 -1 0.000 0 0 -1 0 0 1
   txt:  4 0 0 40 -1 3 8 0.0000 4
+  pic:  dom.fig
   ocad: 640002
   ocad_txt: 780000
 -
