move generic_accessor_unittest.cpp from core/utils/tests/ to tests/

--- a/tests/SConscript
+++ b/tests/SConscript
@@ -4,6 +4,7 @@ subdirs = Split ("""
     2d_rectcrop
     2d_angles
     2d_cache
+    generic_accessor
     margin_classifier
     types_io
     geo_nom
