--- a/vector/vmap3/SConscript
+++ b/vector/vmap3/SConscript
@@ -16,4 +16,5 @@ e.Program("vmap_copy.cpp")
 e.Program("vmap_render.cpp")
 e.Program("vmap_mmb_filter.cpp")
 e.Program("vmap_join.cpp")
+e.Program("vmap_fix_diff.cpp")
 
