mapsoft_mapview: add Download action with glade-made dialog

--- a/viewer/SConscript
+++ b/viewer/SConscript
@@ -9,7 +9,7 @@ e.Library("viewer", Split ("""
 	workplane.cpp
         """))
 e.Prepend(LIBS=["viewer"])
-
+e.Prepend(CPPFLAGS="-export-dynamic")
 e.Program("mapsoft_mapview.cpp")
 
 #le.Program('mapsoft_googleview', "mapsoft_googleview.cpp")
@@ -18,3 +18,5 @@ e.Program("mapsoft_mapview.cpp")
 env.Install(env.bindir, Split("""
   mapsoft_mapview
 """))
+
+env.Install(env.datadir, "dialogs/")
