viewer: change geodata structures in layers and mapview, rewrite actions etc.

--- a/viewer/SConscript
+++ b/viewer/SConscript
@@ -6,7 +6,7 @@ e.UseLibs('gred geo_io mp')
 e.Library("viewer", Split ("""
         generic_dialog.cpp
 	action_manager.cpp
-	workplane.cpp widgets.cpp dataview.cpp
+	workplane.cpp widgets.cpp dataview.cpp actions/action_mode.cpp
         """))
 e.Prepend(LIBS=["viewer"])
 e.Prepend(CPPFLAGS="-export-dynamic")
