--- a/core/geo_io/SConscript
+++ b/core/geo_io/SConscript
@@ -1,6 +1,6 @@
 Import ('env')
 e=env.Clone()
-e.UseLibs('utils')
+e.UseLibs('utils libxml-2.0')
 
 
 e.Library('geo_io', \
@@ -10,6 +10,7 @@ e.Library('geo_io', \
     io_gps.cpp
     io_gu.cpp
     io_kml.cpp
+    io_gpx.cpp
     io_oe.cpp
     io_xml.cpp
     o_img.cpp
