--- a/core/utils/SConscript
+++ b/core/utils/SConscript
@@ -1,6 +1,6 @@
 Import ('env')
 e=env.Clone()
-e.UseLibs('cairomm-1.0 freetype2')
+e.UseLibs('cairomm-1.0 pixman-1 freetype2')
 
 e.Library('utils', \
   Split("""
