--- a/vector/vmap3/SConscript
+++ b/vector/vmap3/SConscript
@@ -14,6 +14,7 @@ e.Library('vmap_renderer',\
 
 e.Program("vmap_copy.cpp")
 e.Program("vmap_render.cpp")
+e.Program("vmap_fig_render.cpp")
 e.Program("vmap_mmb_filter.cpp")
 e.Program("vmap_fix_diff.cpp")
 
