vector/data: add missing ocad numbers

--- a/vector/data/hr.cnf
+++ b/vector/data/hr.cnf
@@ -609,6 +609,7 @@
   name: заросшая дорога
   mp:   POLYLINE 0x2D 0 0
   fig:  2 1 1 1 4210752 7 80 -1 -1 4.000 1 0 7 0 0 0
+  ocad: 829004
   curve: 50
 -
   name: bad route /не использовать!/
