misc/srtm_riv: use utils/srtm3.h

--- a/misc/srtm_riv/makefile
+++ b/misc/srtm_riv/makefile
@@ -2,12 +2,12 @@
 
 all: srtm2pnm geth rivers one_river arrows rtext
 
-srtm2pnm: srtm2pnm.cpp srtm.cpp point.cpp
-geth: geth.cpp srtm.cpp point.cpp
+srtm2pnm: srtm2pnm.cpp point.cpp
+geth: geth.cpp point.cpp
 
-one_river: one_river.cpp srtm.cpp point.cpp map.cpp
-arrows: arrows.cpp srtm.cpp point.cpp map.cpp
-rivers: rivers.cpp srtm.cpp point.cpp map.cpp
-rtext: rtext.cpp font.cpp srtm.cpp point.cpp map.cpp
+one_river: one_river.cpp point.cpp map.cpp
+arrows: arrows.cpp point.cpp map.cpp
+rivers: rivers.cpp point.cpp map.cpp
+rtext: rtext.cpp font.cpp point.cpp map.cpp
 
 
