--- a/misc/srtm_riv/SConscript
+++ b/misc/srtm_riv/SConscript
@@ -1,7 +1,13 @@
 Import('env')
 e=env.Clone()
-e.UseLibs('geo_io')
+e.UseLibs('utils')
 
 e.Program("srtm_riv.cpp")
+
+e.Program("one_river", Split("one_river.cpp point.cpp map.cpp"))
+e.Program("arrows",    Split("arrows.cpp point.cpp map.cpp"))
+e.Program("rivers",    Split("rivers.cpp point.cpp map.cpp"))
+e.Program("rtext",     Split("rtext.cpp font.cpp point.cpp map.cpp"))
+
 
 
