srtm: move library from /core/utils to /core/srtm, cleanup code, add tests

--- a/tests/SConscript
+++ b/tests/SConscript
@@ -11,6 +11,7 @@ subdirs = Split ("""
     types_io
     geo_nom
     options
+    srtm
   """)
 
 SConscript (map (lambda(s): s+"/SConscript", subdirs))
