--- a/programs/.gitignore
+++ b/programs/.gitignore
@@ -5,6 +5,7 @@ mapsoft_add2fig
 mapsoft_calc_nom2ll
 mapsoft_convert
 mapsoft_fig2fig
+mapsoft_gen
 mapsoft_getgoogle
 mapsoft_getks
 mapsoft_getks_ll
