--- a/misc/srtm_riv/SConscript
+++ b/misc/srtm_riv/SConscript
@@ -8,6 +8,9 @@ e.Program("one_river", Split("one_river.cpp map.cpp"))
 e.Program("arrows",    Split("arrows.cpp map.cpp"))
 e.Program("rivers",    Split("rivers.cpp map.cpp"))
 e.Program("rtext",     Split("rtext.cpp font.cpp map.cpp"))
+
+e.Program("river1.cpp")
+e.Program("river2.cpp")
 e.Program("srtm2pnm.cpp")
 
 
