--- a/misc/srtm_riv/SConscript
+++ b/misc/srtm_riv/SConscript
@@ -4,10 +4,10 @@ e.UseLibs('srtm options')
 
 e.Program("srtm_riv.cpp")
 
-e.Program("one_river", Split("one_river.cpp map.cpp"))
-e.Program("arrows",    Split("arrows.cpp map.cpp"))
-e.Program("rivers",    Split("rivers.cpp map.cpp"))
-e.Program("rtext",     Split("rtext.cpp font.cpp map.cpp"))
+e.Program("one_river.cpp")
+e.Program("arrows.cpp")
+e.Program("rivers.cpp")
+e.Program("rtext", Split("rtext.cpp font.cpp"))
 
 e.Program("river1.cpp")
 e.Program("river2.cpp")
