--- a/tests/srtm/SConscript
+++ b/tests/srtm/SConscript
@@ -2,5 +2,8 @@ Import ('env')
 e=env.Clone()
 e.UseLibs('srtm loaders')
 
-e.Program('srtm1.cpp')
+e.Program('srtm_pic.cpp')
+e.Program('srtm_interp.cpp')
+e.Program('map_trace.cpp')
+e.Program('trace_river.cpp')
 
