SConscript: keep system PKG_CONFIG_PATH value

--- a/core/SConscript
+++ b/core/SConscript
@@ -21,7 +21,8 @@ subdirs = Split ("""
 
 # add CPPPATH and PKG_CONFIG_PATH to global env
 env.Append (CPPPATH = "#core")
-env.Append (ENV = {'PKG_CONFIG_PATH': os.getcwd()+'/pc'})
+env.Append (ENV = {'PKG_CONFIG_PATH':
+  [os.getcwd()+'/pc', os.getenv('PKG_CONFIG_PATH')] })
 
 #swig = env.Clone()
 #swig.Append(CPPPATH = [distutils.sysconfig.get_python_inc()])
