--- a/programs/.gitignore
+++ b/programs/.gitignore
@@ -6,6 +6,7 @@ mapsoft_calc_nom2ll
 mapsoft_convert
 mapsoft_fig2fig
 mapsoft_gen
+mapsoft_geofig
 mapsoft_getgoogle
 mapsoft_getks
 mapsoft_getks_ll
