--- a/vector/vmap3/SConscript
+++ b/vector/vmap3/SConscript
@@ -12,12 +12,11 @@ e.Library('vmap_renderer',\
     vmap_renderer.cpp
   """))
 
-e.Program("vmap_copy.cpp")
 e.Program("vmap_render.cpp")
 e.Program("vmap_mmb_filter.cpp")
 e.Program("vmap_1km_filter.cpp")
 e.Program("vmap_fix_diff.cpp")
 
 env.Install(env.bindir, Split("""
-  vmap_copy vmap_render
+  vmap_render
 """))
