viewer: add widgets in comboboxes.h; working version of page_box widget

--- a/viewer/SConscript
+++ b/viewer/SConscript
@@ -11,6 +11,7 @@ e.Library("viewer", Split ("""
 	dataview.cpp
 	mapview.cpp
 
+	widgets/comboboxes.cpp
 	widgets/coord_box.cpp
 	widgets/nom_box.cpp
 	widgets/page_box.cpp
