--- a/viewer/SConscript
+++ b/viewer/SConscript
@@ -7,7 +7,22 @@ e.UseLibs('gred geo_io mp')
 
 e.Library("viewer", Split ("""
 	action_manager.cpp
-	workplane.cpp widgets.cpp dataview.cpp mapview.cpp
+	workplane.cpp
+	dataview.cpp
+	mapview.cpp
+
+	widgets/coord_box.cpp
+	widgets/nom_box.cpp
+
+	dialogs/map.cpp
+	dialogs/wpt.cpp
+	dialogs/trk.cpp
+	dialogs/trk_pt.cpp
+	dialogs/show_pt.cpp
+	dialogs/download.cpp
+	dialogs/trk_filter.cpp
+	dialogs/trk_mark.cpp
+	dialogs/save_img.cpp
         """))
 e.Prepend(LIBS=["viewer"])
 e.Program("mapsoft_mapview.cpp")
