--- a/core/geo_io/SConscript
+++ b/core/geo_io/SConscript
@@ -1,7 +1,6 @@
 Import ('env')
 e=env.Clone()
-e.UseLibs('utils libxml-2.0 libzip')
-
+e.UseLibs('libxml-2.0 libzip')
 
 e.Library('geo_io', \
     Split ("""
@@ -14,7 +13,5 @@ e.Library('geo_io', \
     io_oe.cpp
     io_xml.cpp
     io_zip.cpp
-    o_img.cpp
-    o_tiles.cpp
     geofig.cpp
      """))
