--- a/programs/SConscript
+++ b/programs/SConscript
@@ -1,7 +1,7 @@
 Import ('env')
 
 e=env.Clone()
-e.UseLibs('geo_io mp srtm')
+e.UseLibs('geo_io img_io mp srtm')
 
 def pod2man(env, name, ext):
    """Setup command for pod2man conversion by <name> argument"""
