--- a/viewer/SConscript
+++ b/viewer/SConscript
@@ -3,7 +3,7 @@ Import ('env')
 SConscript("images/SConscript")
 
 e=env.Clone()
-e.UseLibs('gred layers geo_io mp')
+e.UseLibs('gred layers geo_io mp srtm')
 
 e.Library("viewer", Split ("""
 	action_manager.cpp
