--- a/viewer/SConscript
+++ b/viewer/SConscript
@@ -29,6 +29,7 @@ e.Library("viewer", Split ("""
 	dialogs/trk_mark.cpp
 	dialogs/draw_opt.cpp
 	dialogs/save_img.cpp
+	dialogs/srtm_opt.cpp
         """))
 e.Prepend(LIBS=["viewer"])
 e.Program("mapsoft_mapview.cpp")
