viewer: Navigation mode

--- a/tests/jeeps/Makefile
+++ b/tests/jeeps/Makefile
@@ -1,8 +1,6 @@
-all: test1 test2
+all: test1 test2 test_pvt
 
-test1: test1.c ../jeeps/jeeps.a
-	gcc test1.c ../jeeps/jeeps.a -lm -lusb -o test1
+LDLIBS = -ljeeps -lm -lusb-1.0
+LDFLAGS = -L../../core/jeeps/
+CFLAGS=-I../../core/jeeps/
 
-test2: test2.c
-	make -C ../jeeps
-	gcc test2.c ../jeeps/jeeps.a -lm -lusb -o test2
