--- a/core/geo/SConscript
+++ b/core/geo/SConscript
@@ -2,6 +2,9 @@ Import ('env')
 env.Library('geo', \
     Split ("""
 	geo_convs.cpp
+	g_wpt.cpp
+	g_trk.cpp
+	g_map.cpp
 	geo_data.cpp
 	geo_types.cpp
         geo_refs.cpp
