--- a/core/layers/SConscript
+++ b/core/layers/SConscript
@@ -4,7 +4,7 @@ e.UseLibs('utils srtm')
 
 e.Library('layers', \
     Split ("""
-        layer_geomap.cpp
+        layer_map.cpp
         layer_trk.cpp
         layer_wpt.cpp
         layer_srtm.cpp
