--- a/misc/srtm_riv/SConscript
+++ b/misc/srtm_riv/SConscript
@@ -2,12 +2,9 @@ Import('env')
 e=env.Clone()
 e.UseLibs('srtm options loaders')
 
-e.Program("srtm_riv.cpp")
-
 e.Program("arrows.cpp")
 e.Program("rtext", Split("rtext.cpp font.cpp"))
 
-e.Program("river2.cpp")
-
-
-
+e.Program("trace_one.cpp")
+e.Program("trace_area.cpp")
+e.Program("trace_map.cpp")
