loaders: some fixes in image_png.cpp; img_convert program

--- a/core/loaders/SConscript
+++ b/core/loaders/SConscript
@@ -7,4 +7,8 @@ env.Library('loaders', \
         image_png.cpp
         image_r.cpp
     """))
+
+e=env.Clone()
+e.UseLibs('loaders')
+e.Program("img_convert.cpp")
  
