loaders: gif support (read only, no transparency)

--- a/core/loaders/SConscript
+++ b/core/loaders/SConscript
@@ -5,6 +5,7 @@ env.Library('loaders', \
 	image_jpeg.cpp
         image_tiff.cpp
         image_png.cpp
+        image_gif.cpp
         image_r.cpp
     """))
 
