--- a/vector/vmap3/SConscript
+++ b/vector/vmap3/SConscript
@@ -1,14 +1,11 @@
 Import ('env')
 e = env.Clone()
 
-e.UseLibs('vmap')
+e.UseLibs('vmap gred')
 
 e.Prepend(LIBS=["vmap_renderer"])
 e.Library('vmap_renderer',\
   Split ("""
-    vmap_rend_cnt.cpp
-    vmap_rend_txt.cpp
-    vmap_rend_pic.cpp
     vmap_renderer.cpp
   """))
 
